# language-performance-tests

./: .gitignore  plot.data
cpu/: plot.data
cpu/go/: go.mod  main-gc.go  main.go
cpu/java/: build.gradle  settings.gradle
cpu/java/src/main/resources/: application.properties
cpu/js/: main.js
cpu/python/: main.py
cpu/rust/: Cargo.toml
cpu/rust/src/: main.rs
file_io/: README.md  file_io.data
file_io/go/: main.go
file_io/java/: build.gradle  settings.gradle
file_io/java/src/main/java/com/test/fileio/: Main.java
file_io/js/: main.js
file_io/python/: main.py
file_io/rust/: Cargo.toml
file_io/rust/src/: main.rs
plot/: plot_bench.py
