[package]
name = "threading-test"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "=1.10.0"
rayon-core = "=1.12.1"
threadpool = "1"
num_cpus = "1"
tokio = { version = "=1.38.0", features = ["full"] }
futures-cpupool = "0.1"
futures = "0.1"
serde_json = { version = "1", features = ["preserve_order"] }
